--- a/src/backend/functions/package.json
+++ b/src/backend/functions/package.json
@@ -5,7 +5,7 @@
     "clean": "rimraf lib/",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
+    "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -16,6 +16,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/express": "^4.17.3",
+    "@types/glob": "^7.1.3",
     "body-parser": "^1.19.0",
     "camelcase": "^6.2.0",
     "express": "^4.17.1",
