--- a/src/clients/customer/android/app/build.gradle
+++ b/src/clients/customer/android/app/build.gradle
@@ -61,4 +61,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
